Implement perf test.