@@ -78,6 +78,16 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-surefire-plugin</artifactId>-->
+            <!--<configuration>-->
+            <!--<forkMode>pertest</forkMode>-->
+            <!--<argLine>-Xms4096m -Xmx4096m -verbose:gc -server -XX:+UseG1GC -XX:+AggressiveOpts</argLine>-->
+            <!--<testFailureIgnore>false</testFailureIgnore>-->
+            <!--<skip>false</skip>-->
+            <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 </project>
